--- a/src/app/treino/treino.component.html
+++ b/src/app/treino/treino.component.html
@@ -1,22 +1,23 @@
 <div class="teste">
 
   <button type="button" class="btn btn-primary btn-lg" [routerLink]="['/home-page']">Voltar</button>
-
-  <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
+<br>
+<br>
+  <div class="btn-group " role="group" aria-label="Basic radio toggle button group">
     <input type="radio" class="btn-check" name="btnradio" id="btnradioA" autocomplete="off" checked>
-    <label class="btn btn-outline-primary" for="btnradioA">Treino A</label>
+    <label class="btn btn-outline-primary groupbutton" for="btnradioA">Treino A</label>
   
     <input type="radio" class="btn-check" name="btnradio" id="btnradioB" autocomplete="off">
-    <label class="btn btn-outline-primary" for="btnradioB">Treino B</label>
+    <label class="btn btn-outline-primary groupbutton" for="btnradioB">Treino B</label>
   
     <input type="radio" class="btn-check" name="btnradio" id="btnradioC" autocomplete="off">
-    <label class="btn btn-outline-primary" for="btnradioC">Treino C</label>
+    <label class="btn btn-outline-primary groupbutton" for="btnradioC">Treino C</label>
 
     <input type="radio" class="btn-check" name="btnradio" id="btnradioD" autocomplete="off" disabled>
-    <label class="btn btn-outline-primary" for="btnradioD">Treino D</label>
+    <label class="btn btn-outline-primary groupbutton" for="btnradioD">Treino D</label>
 
     <input type="radio" class="btn-check" name="btnradio" id="btnradioE" autocomplete="off" disabled>
-    <label class="btn btn-outline-primary" for="btnradioE">Treino E</label>
+    <label class="btn btn-outline-primary groupbutton" for="btnradioE">Treino E</label>
   </div>
 
 </div>
