--- a/src/app/treino/treino.component.scss
+++ b/src/app/treino/treino.component.scss
@@ -5,6 +5,10 @@
   height: 500px;
 }
 
-.btn-check:disabled + .btn-outline-primary {
-  color: #dc3545;
+.groupbutton {
+border-radius: 0;
+}
+
+.btn-check:disabled + .groupbutton {
+  display: none;
 }
