--- a/src/app/treino/treino.component.html
+++ b/src/app/treino/treino.component.html
@@ -16,7 +16,7 @@
     <input type="radio" class="btn-check" name="btnradio" id="btnradioD" autocomplete="off" disabled>
     <label class="btn btn-outline-primary groupbutton" for="btnradioD">Treino D</label>
 
-    <input type="radio" class="btn-check" name="btnradio" id="btnradioE" autocomplete="off" disabled>
+    <input type="radio" class="btn-check" name="btnradio" id="btnradioE" autocomplete="off">
     <label class="btn btn-outline-primary groupbutton" for="btnradioE">Treino E</label>
   </div>
 
